--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Login Form</title>
+    <title>Sign Up / Registration Form </title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
@@ -9,25 +9,34 @@
   <body>
     <div class="container">
       <div class="center">
-          <h1>Login</h1>
-          <form action="" method="POST">
+          <h1>Register</h1>
+          <form method="POST" action="">
               <div class="txt_field">
-                  <input type="text" name="text" required>
+                  <input type="text" name="name" required>
                   <span></span>
-                  <label>Username</label>
+                  <label>Name</label>
+              </div>
+              <div class="txt_field">
+                  <input type="email" name="email" required>
+                  <span></span>
+                  <label>Email</label>
               </div>
               <div class="txt_field">
                   <input type="password" name="password" required>
                   <span></span>
                   <label>Password</label>
               </div>
-              <div class="pass">Forget Password?</div>
-              <input name="submit" type="Submit" value="Login">
+              <div class="txt_field">
+                  <input type="password" name="cpassword" required>
+                  <span></span>
+                  <label>Confirm Password</label>
+              </div>
+              <input name="submit" type="Submit" value="Sign Up">
               <div class="signup_link">
-                  Not a Member ? <a href="signup.php">Signup</a>
+                  Have an Account ? <a href="#">Login Here</a>
               </div>
           </form>
       </div>
-    </div>
+  </div>
   </body>
 </html>
